[package]
name = "web-crawler-book"
version = "0.1.0"
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["blocking"] }
eyre = "0.6.3"
select = "0.5.0"
url = "2.2.0"
log = "0.4.11"
env_logger = "0.8.2"
