[package]
name = "wasm-dev-book-parcel"
version = "0.1.0"
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tinymt = { git = "https://github.com/mizdra/rust-tinymt", tag = "0.1.0" }
