[package]
name = "wasm-dev-book-webpack"
version = "0.1.0"
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
