[package]
name = "relly"
version = "0.1.0"
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0"
zerocopy = "0.3"

[dev-dependencies]
md-5 = "0.10.1"
tempfile = "3"
